--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,21 +4,19 @@
     <title><% if(title) { %><%= title %> - <% } %>Image Sorter</title>
     <!--styles -->
     <link rel="stylesheet" type="text/css" href="components/bootstrap-css-only/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="components/ng-scrollable/assets/ng-scrollable.css">
     <link rel="stylesheet" type="text/css" href="components/ng-sortable/dist/ng-sortable.min.css">
     <link rel="stylesheet" type="text/css" href="components/ng-sortable/dist/ng-sortable.style.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <!--scripts-->
     <script type="text/javascript" src="components/angular/angular.min.js"></script>
-    <script type="text/javascript" src="components/ng-scrollable/src/ng-scrollable.js"></script>
     <script type="text/javascript" src="components/ng-sortable/dist/ng-sortable.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
 </head>
 <body ng-controller="MainCtrl">
 <div class="container-fluid">
-    <slidebox speed="25">
-    <ul as-sortable="sortableOptions" ng-model="photos" class="row-fluid" ng-scrollable>
-        <li ng-repeat="photo in photos" as-sortable-item class="as-sortable-item col-lg-12">
+    <slidebox speed="15">
+    <ul as-sortable="sortableOptions" ng-model="photos" class="row-fluid">
+        <li ng-repeat="photo in photos" as-sortable-item class="as-sortable-item col-xs-12">
 	        <div>
 	        	<img as-sortable-item-handle ng-src="{{photo.url}}">
 	        </div>
