--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,6 +11,18 @@ ul {
 	margin: 0;
 }
 
+.photo {
+	padding: 3px;
+	border-radius: 15px;
+	box-shadow: 2px 2px 3px black;
+}
+
+/**** Desktop Styles ****/
+
+.desktop {
+	display: block;
+}
+
 .as-sortable-placeholder {
 	display: inline-block;
 	margin: 15px 0;
@@ -20,17 +32,15 @@ ul {
 	background: none;
 	border: none;
 	border-radius: initial;
-	margin: 15px;
+	margin: 15px 0;
 	list-style: none;
 }
 
 .as-sortable-item-handle {
-	max-width: 80%;
+	max-width: 50%;
 	height: auto;
 	display: block;
 	margin: auto;
-	border-radius: 15px;
-	box-shadow: 2px 2px 3px black;
 }
 
 .container-fluid {
@@ -39,27 +49,6 @@ ul {
 
 #sortable-container {
     display: inline-block;
-}
-
-.scroll-up, .scroll-down {
-	position: fixed;
-	height: 0;
-	left: 0;
-	right: 0;
-	background-color: rgba(0,0,0,.7);
-}
-
-.scroll-up {
-	top: 0%;
-}
-
-.scroll-down {
-	bottom: 0%;
-}
-
-.scroll-up.moving, .scroll-down.moving {
-	height: 150px;
-	transition: .1s linear height;
 }
 
 /** Slidebox-Vertical **/
@@ -92,16 +81,105 @@ ul {
 .slidebox-up {
     background: rgba(128, 128, 128, 0.5) url(../images/up-arrow.png) center center no-repeat;
     top: 0;
-    cursor: w-resize;
+    cursor: n-resize;
 }
 
 .slidebox-down {
     background: rgba(128, 128, 128, 0.5) url(../images/down-arrow.png) center center no-repeat;
     bottom: 0;
-    cursor: e-resize;
+    cursor: s-resize;
 }
 
-.col-lg-12 {
-	float: none;
+/**** Mobile Styles ****/
+
+.mobile {
+	display: none;
+	text-align: center;
+	overflow-y: hidden;
+}
+
+.mobile-wrapper {
+	position: absolute;
+	top: 50%;
+	transform: translateY(-50%);
+}
+
+.next-pair-wrapper, .previous-pair-wrapper {
+	position: absolute;
+	height: 20%;
+	left: 0;
+	right: 0;
+	overflow: hidden;
+}
+.next-pair, .previous-pair {
+	height: 100%;
+	width: 100%;
+	background-color: rgba(0,0,0,.5);
+	box-shadow: 0 0 5px black;
+	transition: .1s linear all;
+}
+
+.next-pair img, .previous-pair img {
+	position: absolute;
+	top: 50%;
+	transform: translateY(-50%);
+}
+
+.next-pair-wrapper {
+	bottom: 0;
+}
+.next-pair:active {
+	transform: translateY(10px);
+}
+
+.previous-pair-wrapper {
+	top: 0;
+}
+.previous-pair:active {
+	transform: translateY(-10px);
+}
+
+.swap {
+	position: relative;
+	top: -25px;
+	height: 20%;
+	width: 20%;
+	margin: auto;
+	margin-top: -10%;
+	transition: .1s linear all;
+}
+.swap:active {
+	top: -20px;
+}
+
+.swap img {
+	height: 100%;
+	width: 100%;
+	-webkit-filter: drop-shadow(0 0 10px rgb(246,242,229));
+	filter: drop-shadow(0 0 10px rgb(246,242,229));
+}
+
+.swap-half {
 	display: inline-block;
+	width: 49.5%;
+	padding: 15px;
+	transform: translateX(0%);
+	transition: .1s linear all;
+}
+
+.swap-half img {
+	height: 100%;
+	width: 100%;
+	box-sizing: border-box;
+}
+
+/**** Media Queries ****/
+
+@media (max-width: 768px) {
+	.mobile {
+		display: block;
+	}
+	.desktop {
+		display: none;
+	}
 }
