--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,23 +10,42 @@
     <!--scripts-->
     <script type="text/javascript" src="components/angular/angular.min.js"></script>
     <script type="text/javascript" src="components/ng-sortable/dist/ng-sortable.js"></script>
+    <script type="text/javascript" src="components/angular-touch/angular-touch.min.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
 </head>
+
 <body ng-controller="MainCtrl">
-<div class="container-fluid">
+<div id="desktop" class="container-fluid desktop">
     <slidebox speed="15">
     <ul as-sortable="sortableOptions" ng-model="photos" class="row-fluid">
         <li ng-repeat="photo in photos" as-sortable-item class="as-sortable-item col-xs-12">
 	        <div>
-	        	<img as-sortable-item-handle ng-src="{{photo.url}}">
+	        	<img as-sortable-item-handle ng-src="{{photo.url}}" class="photo">
 	        </div>
         </li>
     </ul>
     </slidebox>
-    <!--<div ng-click="scrollDown" class="scroll-up" ng-class="{'moving': isMoving}">
+</div>
+<div class="mobile">
+    <div id="mobile" class="mobile-wrapper" ng-model="swapPhotos">
+        <div class="swap-half" ng-repeat="photo in swapPhotos">
+            <img ng-src="{{photo.url}}" class="photo">
+        </div>
+        <div class="swap" ng-click="swap()">
+            <img src="/images/swap.svg">
+        </div>
     </div>
-    <div ng-click="scrollDown" class="scroll-down" ng-class="{'moving': isMoving}">
-	</div>-->
+    <div class="previous-pair-wrapper" ng-click="previousSwapPair()">
+        <div class="previous-pair">
+            <img src="/images/up-arrow.png">
+        </div>
+    </div>
+    <div class="next-pair-wrapper" ng-click="nextSwapPair()">
+        <div class="next-pair">
+            <img src="/images/down-arrow.png">
+        </div>
+    </div>
 </div>
 </body>
+
 </html>
