--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,8 +9,9 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <!--scripts-->
     <script type="text/javascript" src="components/angular/angular.min.js"></script>
-    <script type="text/javascript" src="components/ng-sortable/dist/ng-sortable.js"></script>
+    <script type="text/javascript" src="components/ng-sortable/dist/ng-sortable.min.js"></script>
     <script type="text/javascript" src="components/angular-touch/angular-touch.min.js"></script>
+    <script type="text/javascript" src="js/modernizr.custom.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
 </head>
 
