--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,6 +2,8 @@
 <html ng-app="plunker">
 <head>
     <title><% if(title) { %><%= title %> - <% } %>Image Sorter</title>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--styles -->
     <link rel="stylesheet" type="text/css" href="components/bootstrap-css-only/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="components/ng-sortable/dist/ng-sortable.min.css">
