--- a/public/css/style.css
+++ b/public/css/style.css
@@ -111,7 +111,7 @@ ul {
 
 .next-pair-wrapper, .previous-pair-wrapper {
 	position: absolute;
-	height: 20%;
+	height: 15%;
 	left: 0;
 	right: 0;
 	overflow: hidden;
@@ -184,7 +184,32 @@ ul {
 	.mobile {
 		display: block;
 	}
+
 	.desktop {
 		display: none;
+	}
+
+	@media screen and (orientation:portrait) {
+		.swap-half {
+			height: 30%;
+			width: 100%;
+		}
+		.swap-half img {
+			width: 80%;
+		}
+		.swap {
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			margin-top: -10%;
+			margin-left: -10%;
+		}
+		.swap:active {
+			top: 50%;
+			transform: scale(1.2);
+		}
+		.next-pair-wrapper, .previous-pair-wrapper {
+			height: 10%;
+		}
 	}
 }
